= RubyMotion 2.39 =

  * Added support for iOS 8.2 (beta). You will need to install an Xcode 6.2
    beta to support it.
  * [iOS] Fix `rake crashlog:device' crash report symbolication.
  * [iOS] Fixed a bug where Bundler wouldn't be used when it will build
    Extensions and Frameworks.
  * [iOS] Create a `UIViewController`, `UINavigationController`, and `UIWindow`
    in the default new application template.
  * [OSX] Only build for 64-bit (`x86_64`) by default.
  * [iOS] Enabled arm64 support by default for iOS projects. 
  * [iOS] Honour explicit `device_name` or `target` specified by user.
    Specifying both is disallowed, because a device is configured for a
    specific SDK.
  * [iOS] Fixed a regression where Extension and Frameworks could not build for
    the iOS device platform.
  * [iOS] Fixed a bug where `rake spec' would return 0 as exit code even if it
    failed due to a crash.
  * [iOS] Fixed a bug in `rake spec' where #tap and #rotate_device were
    causing a crash when ran in 64-bit mode (simulator).
  * [iOS] Fixed a bug where all rake task could not be run under the root
    directory of Extension or Framework, preventing CocoaPods libraries to be
    installed properly.
  * [iOS] Fixed a bug where shared frameworks would not be built for 64-bit.
  * [iOS] Fixed a bug where it was not possible to customize the Action and
    Share extension's icon. The `app.icons' property can now be set in the
    extension's Rakefile.
  * [iOS] Fixed a bug where extensions could not be built if Bundler was not
    installed due to a Pathname dependency.
  * [iOS] Added launch images for iPhone 6 and iPhone 6 Plus. Thanks to
    Hwee-Boon Yar for the patch (pull request #170).
  * [iOS] Fixed the "ERROR ITMS-9000" error when trying to submit an app that
    contained extensions. Thanks to Hwee-Boon Yar for patch.
  * [iOS] Fixed a bug where the relative path cannot be used in
    `app.provisioning_profile'.