@@ -495,6 +495,17 @@ EOS
       xcassets_bundles
     end
 
+    # @return [String] The path to the `Info.plist` file that gets generated by
+    #         compiling the asset bundles and contains the data that should be
+    #         merged into the final `Info.plist` file.
+    #
+    def asset_bundle_partial_info_plist_path(platform)
+      File.expand_path(File.join(versionized_build_dir(platform), 'AssetCatalog-Info.plist'))
+    end
+
+    # @return [String, nil] The path to the asset bundle that contains
+    #         application icons, if any.
+    #
     def app_icons_asset_bundle
       app_icons_asset_bundles = assets_bundles.map { |b| Dir.glob(File.join(b, '*.appiconset')) }.flatten
       if app_icons_asset_bundles.size > 1
@@ -505,8 +516,28 @@ EOS
       app_icons_asset_bundles.sort.first
     end
 
+    # @return [String, nil] The name of the application icon set, without any
+    #         extension.
+    #
     def app_icon_name_from_asset_bundle
-      File.basename(app_icons_asset_bundle, '.appiconset')
+      if bundle = app_icons_asset_bundle
+        File.basename(bundle, '.appiconset')
+      end
+    end
+
+    # Assigns the application icon information, found in the `Info.plist`
+    # generated by compiling the asset bundles, to the configuration’s `icons`.
+    #
+    # @return [void]
+    #
+    def add_images_from_asset_bundles(platform)
+      if app_icons_asset_bundle
+        path = asset_bundle_partial_info_plist_path(platform)
+        if File.exist?(path)
+          content = `/usr/libexec/PlistBuddy -c 'Print :CFBundleIcons:CFBundlePrimaryIcon:CFBundleIconFiles' "#{path}"`.strip
+          self.icons = content.split("\n")[1..-2].map(&:strip)
+        end
+      end
     end
 
     attr_reader :vendor_projects
