@@ -1,5 +1,6 @@
 = RubyMotion 2.39 =
 
+  * [iOS] Added support for specifying launch images from asset catalogs.
   * Added support for iOS 8.2 (beta). You will need to install an Xcode 6.2
     beta to support it.
   * [iOS] Fix `rake crashlog:device' crash report symbolication.
